<resources>
    <string name="app_name">MyTotalCommander</string>
    <string name="folder_history_custom_tool_bar">Історія \n каталогів</string>
    <string name="tabs_custom_tool_bar">Закладки</string>
    <string name="my_total_commander">My Total Commander</string>
    <string name="enable_disable_selection">Виділити</string>
    <string name="copy">Копіювати</string>
    <string name="make_archive">Архівувати</string>
    <string name="delete">Видалити</string>
    <string name="make_sort">Сортувати</string>
    <string name="add_remake_button">Додати \n кнопку</string>
    <string name="inner_ssd">Внутрішній запам\'ятовуючий пристрій</string>
    <string name="photo">Фотографії</string>
    <string name="loaded_files">Завантажені файли</string>
    <string name="file_system_root">Корінь файлової системи</string>
    <string name="tabs">Закладки</string>
    <string name="installed_programs">Встановлені програми</string>
    <string name="add_load_plugins">Додати (завантажити) плагіни</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_dialog_add_plugins">Відкрити веб-браузер на сторінці: \n http://www.ghisler.com/androidplugins/googleplay</string>
    <string name="alert_dialog_add_plugins_title">Додати плагіни</string>
    <string name="alert_dialog_cancel">Скасувати</string>
    <string name="alert_dialog_ok">ОК</string>
    <string name="custom_menu_find">Пошук...</string>
    <string name="custom_menu_exit">Вихід</string>
    <string name="custom_menu_new_folder">Нова тека...</string>
    <string name="custom_menu_settings">Налаштування...</string>
    <string name="custom_menu_help">Довідка(HTML)</string>
    <string name="my_total_commander_icon_custom_action_bar">MyTotalCommander</string>
    <string name="folder_history_custom_action_bar">Історія \nкаталогів</string>
    <string name="tabs_custom_action_bar">Закладки</string>
    <string name="menu_custom_action_bar">Меню</string>
    <string name="do_you_want_to_exit_programm">Бажаєте вийти з програми?</string>
    <string name="exit_option">ВИХІД</string>
    <string name="menu_find_files">ПОШУК ФАЙЛІВ</string>
    <string name="menu_function_does_not_work">Функція не підтримується</string>
    <string name="menu_add_new_folder">НОВА ТЕКА</string>
</resources>
