<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/custom_tool_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:id="@+id/custom_tool_bar_back_home"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/total_commander"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_total_commander"
                android:layout_gravity="center"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <Button
            android:id="@+id/custom_tool_bar_folder_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folder_history_custom_tool_bar"
            android:textSize="10dp"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/custom_tool_bar_tabs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabs_custom_tool_bar"
            android:textSize="10dp"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/custom_tool_bar_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icons8_menu_2_96"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginBottom="10dp"></LinearLayout>

</LinearLayout>